tests/fixtures/valid_programs/boolean_ops.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    // Boolean operations
    const a: boolean = true;
    const b: boolean = false;
    
    const and_result: boolean = a && b;  // false
    const or_result: boolean = a || b;   // true
    const not_result: boolean = !a;      // false
    
    // Comparison operations
    const x: int = 10;
    const y: int = 20;
    
    const eq_result: boolean = x == y;   // false
    const ne_result: boolean = x != y;   // true
    const lt_result: boolean = x < y;    // true
    const le_result: boolean = x <= y;   // true
    const gt_result: boolean = x > y;    // false
    const ge_result: boolean = x >= y;   // false
    
    IO::println("Boolean and Comparison Test:");
    IO::print_bool(and_result);
    IO::print_bool(or_result);
    IO::print_bool(not_result);
    IO::print_bool(eq_result);
    IO::print_bool(ne_result);
    IO::print_bool(lt_result);
    IO::print_bool(le_result);
    IO::print_bool(gt_result);
    IO::print_bool(ge_result);
    
    return 0;
}