tests/fixtures/invalid_programs/missing_semicolons.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    // Syntax errors
    const x: int = 10
    // Missing semicolon above
    
    const y: int = 20;
    
    return 0
    // Missing semicolon above
}